# lolapi-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: champion_tags.rs  dto.rs  item_tags.rs  lib.rs  locale.rs  mastery_tags.rs  queue_type.rs  rune_tags.rs  static_data_champion_tags.rs  static_data_item_tags.rs  static_data_mastery_tags.rs  static_data_rune_tags.rs  static_data_summoner_spell_tags.rs  summoner_spell_tags.rs
src/champion_mastery/: mod.rs
src/champion_mastery/champion_masteries/: mod.rs
src/champion_mastery/scores/: by_summoner.rs  mod.rs
src/champion_mastery_v3/: mod.rs
src/champion_mastery_v3/champion_masteries/: mod.rs
src/champion_mastery_v3/scores/: by_summoner.rs  mod.rs
src/dto/: lane.rs  mod.rs  platform.rs  role.rs  season.rs  static_data.rs  summoner.rs
src/dto/matchlist/: match_reference.rs  mod.rs
src/dto/matsh/: game_mode.rs  game_type.rs  map.rs  mod.rs
src/league/: mod.rs
src/league/challengerleagues/: by_queue.rs  mod.rs
src/league/leagues/: mod.rs  (+1 more)
src/league_v3/: mod.rs
src/match_v3/: matches.rs  mod.rs
src/platform/: champions.rs  mod.rs
src/platform_v3/: champions.rs  mod.rs
src/static_data/: champions.rs  items.rs  language_strings.rs  languages.rs  maps.rs  masteries.rs  mod.rs  profile_icons.rs  realms.rs  runes.rs  summoner_spells.rs  versions.rs
src/static_data_v3/: champions.rs  items.rs  language_strings.rs  languages.rs  maps.rs  masteries.rs  mod.rs  profile_icons.rs  realms.rs  runes.rs  summoner_spells.rs  versions.rs
src/status/: mod.rs  shard_data.rs
src/status_v3/: mod.rs  shard_data.rs
(+27 files in other folders)
