[package]
name = "lolapi"
version = "0.4.1"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
description = "Rate limited League of Legends API wrapper (WIP)"
repository = "https://github.com/IcyDefiance/lolapi-rs"
readme = "README.md"
keywords = ["league", "legends", "api", "wrapper", "limit"]
license = "MIT"

[dependencies]
hyper = "0.11"
itertools = "0.6"
num-rational = "0.1"
ratelimit_meter = "0.4"
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
lazy_static = "0.2"
